<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/container_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="84dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:hint="@string/text_username"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="fullname"
            android:hint="@string/text_full_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="dob"
            android:hint="@string/text_dob"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="address"
            android:hint="@string/text_address"
            android:inputType="text" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:padding="10dp"
        android:text="@string/btn_update"
        app:layout_constraintBottom_toTopOf="@id/btn_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.775"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.931" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:padding="10dp"
        android:text="@string/text_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.775"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_login"
        app:layout_constraintVertical_bias="0.931" />

    <TextView
        android:id="@+id/tv_title_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/profile"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="13dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_title_register"
        app:layout_constraintStart_toStartOf="@+id/tv_title_register"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_register"
        android:src="@drawable/ic_profile" />

    <ImageView
        android:id="@+id/iv_edit_profile"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:layout_constraintEnd_toEndOf="@+id/iv_profile"
        app:layout_constraintTop_toTopOf="@id/iv_profile"
        android:background="@drawable/ic_launcher_background"
        android:src="@drawable/ic_edit" />
</androidx.constraintlayout.widget.ConstraintLayout>